tests/baselines/reference/useBeforeDeclaration_propertyAssignment.errors.txt
tests/cases/compiler/useBeforeDeclaration_propertyAssignment.ts(2,27): error TS2448: Block-scoped variable 'b' used before its declaration.


==== tests/cases/compiler/useBeforeDeclaration_propertyAssignment.ts (1 errors) ====
    export class C {
        public a =  { b: this.b };
                              ~
!!! error TS2448: Block-scoped variable 'b' used before its declaration.
!!! related TS2728 tests/cases/compiler/useBeforeDeclaration_propertyAssignment.ts:3:13: 'b' was declared here.
        private b = 0;
    }
    